--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
+
 {
   "name": "my-next-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "postbuild": "next-sitemap",
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start"
@@ -11,6 +13,7 @@
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
+    "next-sitemap": "^4.2.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwindcss": "^3.4.18"
